TestSuite/Verification/Error/Parallel/Correctness/On-Device/Intra-Region/Accelerator/DPNestedTest.par
DPNestedTest{

dp increment([Int] input): [Int] res{
    res[INDEX1] = input[INDEX1] + 1
}

map matrixIncrement([[Int]] input) : [[Int]] res{
    res[INDEX] = increment<<<10>>>(input[INDEX])
}

seq main() : Int {
    var [[Int]] initial = init_List([200,200],1)
    var [[Int]] result = init_List([200,200])
    var [[Int]] result_seq = init_List([200,200])
    
    /*execute the pattern on node 0 device 0 */
    result = matrixIncrement<<<[0,2,0]>>>(initial)
    
    
    for var Int i = 0; i < 200; i++ {
        for var Int j = 0; j < 200; j++ {        
            result_seq[i][j] = 11
            if result_seq[i][j] != result[i][j] {
                print("value at element " {i} "," {j} " is wrong!")
                exit(1)
            }
        }
    }
    
return 0 
}}
